PART3-Core/11.Kubernetes_Orchestration/Test_ConfigMap_Volume/nginx_tls_to_ingress/nginx-http-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-http-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-http-pod
  template:
    metadata:
      labels:
        app: nginx-http-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
