PART3-Core/11.Kubernetes_Orchestration/Test_ConfigMap_Volume/nginx_tls_to_ingress/nginx-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-service
spec:
  type: ClusterIP
  selector:
    app: nginx-http-pod
  ports:
  - port: 8080
    targetPort: 80
