PART3-Core/11.Kubernetes_Orchestration/Test_ConfigMap_Volume/nginx_tls_to_ingress/mynginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx-ingress
  namespace: default
spec:
  tls:
  - hosts: 
    - mynginx.com
    secretName: mynginx-tls-secret
  rules:
  - host: mynginx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-http-service
            port:
              number: 8080
